updated cv and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<!-- custom assets -->
+	<link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/animate.css">
 	<script type="text/javascript" src="./assets/js/script.js"></script>
@@ -150,7 +151,7 @@
 			</div>
 		</div>
 		<div class="row projects">
-			<div class="col-lg-12">
+			<div class="col-lg-12 col-md-12 col-sm-12">
 				<h1 class="text-center" id="projects">Projects</h1>
 				<h6 class="text-center note"><em>Select a category</em></h6>
 				<div class="projects-div">
@@ -169,38 +170,32 @@
 					<div class="project-screenshots">
 						<div class="container">
 							<div class="row">
-								<div class="col-lg-3 col-md-6 col-sm-12">
-									<div id="adm">
-										<a href="http://evening-ravine-82121.herokuapp.com/" target="_blank">
-											<h5 class="text-center">ADM</h5>
-											<img class="img-fluid" src="./assets/images/adm.png">
-										</a>
-									</div>
+								<div class="col-lg-3 col-md-6 col-sm-12" id="adm">
+									<a href="http://evening-ravine-82121.herokuapp.com/" target="_blank">
+										<h5 class="text-center">ADM</h5>
+										<img class="img-fluid" src="./assets/images/adm.png">
+									</a>
 								</div>
-								<div class="col-lg-3 col-md-6 col-sm-12">
-									<div id="musicart">
-										<a href="https://musicarttestuser.000webhostapp.com/" target="_blank">
-											<h5 class="text-center">MusiCart</h5>
-											<img class="img-fluid" src="./assets/images/musicart.png">
-										</a>
-									</div>
+								<div class="col-lg-3 col-md-6 col-sm-12" id="musicart">
+									<a href="https://musicarttestuser.000webhostapp.com/" target="_blank">
+										<h5 class="text-center">MusiCart</h5>
+										<img class="img-fluid" src="./assets/images/musicart.png">
+									</a>
 								</div>
-								<div class="col-lg-3 col-md-6 col-sm-12">
-									<div id="hangman">
+								<div class="col-lg-3 col-md-6 col-sm-2" id="itadakimasu">
+									<a href="https://abigailsdominguez.github.io/itadakimasu/" target="_blank"><h5 class="text-center">Itadakimasu</h5>
+										<img class="img-fluid" src="./assets/images/itadakimasu.png">
+									</a>
+									</div>
+									<div class="col-lg-3 col-md-6 col-sm-12" id="hangman">
 										<a href="https://abigailsdominguez.github.io/hangman/" target="_blank">
 											<h5 class="text-center">Dev's Hangman</h5>
-											<img class="img-fluid" src="./assets/images/hangman.png"></a>
-									</div>
-								</div>
-								<div class="col-lg-3 col-md-6 col-sm-12">
-									<div id="itadakimasu">
-										<a href="https://abigailsdominguez.github.io/itadakimasu/" target="_blank"><h5 class="text-center">Itadakimasu</h5>
-										<img class="img-fluid" src="./assets/images/itadakimasu.png"></a>
+											<img class="img-fluid" src="./assets/images/hangman.png">
+										</a>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -208,7 +203,7 @@
 			<div class="col-lg-10 offset-lg-1">
 				<h1 class="text-center" id="connect">Connect</h1>
 				<h6 class="text-center note">Work with me?</h6>
-				<a href="./assets/documents/cv_dominguez_abigail.pdf" class="btn btn-dark btn-sm download">Download Resume</a>
+				<a href="./assets/documents/cv_dominguez_abigail.pdf" class="btn btn-dark btn-sm download" target="_blank">Download Resume</a>
 				<div class="connect-two">
 					<div class="row">
 						<div class="col-lg-4 email-div text-center">
