add to portfolio

--- a/index.html
+++ b/index.html
@@ -170,36 +170,43 @@
 					<div class="project-screenshots">
 						<div class="container">
 							<div class="row">
-								<div class="col-lg-3 col-md-6 col-sm-12" id="adm">
+								<div class="col-lg-4 col-md-6 col-sm-12" id="adm">
 									<a href="http://evening-ravine-82121.herokuapp.com/" target="_blank">
 										<h5 class="text-center">ADM</h5>
 										<img class="img-fluid" src="./assets/images/adm.png">
 										<small>Features: admin and user accounts, register, login, logout, post, comment, like, unlike, soft deletes, and other CRUD functionalities</small>
 									</a>
 								</div>
-								<div class="col-lg-3 col-md-6 col-sm-12" id="musicart">
+								<div class="col-lg-4 col-md-6 col-sm-12" id="musicart">
 									<a href="https://musicarttestuser.000webhostapp.com/" target="_blank">
 										<h5 class="text-center">MusiCart</h5>
 										<img class="img-fluid" src="./assets/images/musicart.png">
 										<small>Features: admin and user accounts, register, login, logout, add to cart, email confirmation, PayPal connection, password reset, and other CRUD functionalities</small>
 									</a>
 								</div>
-								<div class="col-lg-3 col-md-6 col-sm-2" id="itadakimasu">
+								<div class="col-lg-4 col-md-6 col-sm-2" id="itadakimasu">
 									<a href="https://abigailsdominguez.github.io/itadakimasu/" target="_blank"><h5 class="text-center">Itadakimasu</h5>
 										<img class="img-fluid" src="./assets/images/itadakimasu.png">
 										<small>About: static website</small>
 									</a>
-									</div>
-									<div class="col-lg-3 col-md-6 col-sm-12" id="hangman">
+								</div>
+								<div class="col-lg-4 col-md-6 col-sm-12" id="hangman">
 										<a href="https://abigailsdominguez.github.io/hangman/" target="_blank">
 											<h5 class="text-center">Dev's Hangman</h5>
 											<img class="img-fluid" src="./assets/images/hangman.png">
 											<small>About: JavaScript game</small>
 										</a>
-										</div>
-									</div>
+								</div>
+								<div class="col-lg-4 col-md-6 col-sm-12" id="saldanas">
+										<a>
+											<h5 class="text-center">Saldaña's (Ongoing)</h5>
+											<img class="img-fluid" src="./assets/images/saldanas.png">
+											<small>About: eCommerce Website</small>
+										</a>
 								</div>
 							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
