--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div class="right">
 					<ul class="nav-list">
 						<li class="nav-item text-center">
-							<h4>Trained Web Developer</h4>
+							<h4>Full Stack Web Developer</h4>
 						</li>
 						<li class="nav-item text-center">
-							<h4>Experienced Data Analyst</h4>
+							<h4>Data Analyst</h4>
 						</li>
 						<li class="nav-item text-center">
 							<h4>Licensed Professional Teacher</h4>
